source/gluster/build/build_install_glusterfs/make_error1
  CC       libglusterfs_la-async.lo
In file included from async.c:68:0:
glusterfs/async.h:135:28: error: field 'available' has incomplete type
     struct __cds_wfs_stack available;
                            ^
async.c: In function 'gf_async_init':
async.c:648:5: error: implicit declaration of function '__cds_wfs_init' [-Werror=implicit-function-declaration]
     __cds_wfs_init(&gf_async_ctrl.available);
     ^
cc1: some warnings being treated as errors
Makefile:1372: recipe for target 'libglusterfs_la-async.lo' failed
make[4]: *** [libglusterfs_la-async.lo] Error 1
make[4]: Leaving directory '/home/glusterfs-11.0/libglusterfs/src'
Makefile:816: recipe for target 'all' failed
make[3]: *** [all] Error 2
make[3]: Leaving directory '/home/glusterfs-11.0/libglusterfs/src'
Makefile:455: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/home/glusterfs-11.0/libglusterfs'
Makefile:585: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/glusterfs-11.0'
Makefile:479: recipe for target 'all' failed
make: *** [all] Error 2
